attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1743587633743.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/ai_language/build
[  6%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/DLInterpreterIn file included from /home/runner/workspace/ai_language/src/interpreters/DLInterpreter.cpp:3:
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/DLInterpreter.h:35:66: error: virt-specifiers in ‘handleShowCommand’ not allowed outside a class definition
   35 |  void handleShowCommand(const std::vector<std::string>& args) override;
      |                                                               ^~~~~~~~

/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/DLInterpreter.h:36:66: error: virt-specifiers in ‘handleSaveCommand’ not allowed outside a class definition
   36 |  void handleSaveCommand(const std::vector<std::string>& args) override;
      |                                                               ^~~~~~~~

/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/DLInterpreter.h:37:30: error: virt-specifiers in ‘handleHelpCommand’ not allowed outside a class definition
   37 |     void handleHelpCommand() override;
      |                              ^~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/DLInterpreter.h:38:65: error: virt-specifiers in ‘handleAddCommand’ not allowed outside a class definition
   38 |   void handleAddCommand(const std::vector<std::string>& args) override;
      |                                                               ^~~~~~~~

/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/DLInterpreter.h:40:1: error: expected unqualified-id before ‘private’
   40 | private:
      | ^~~~~~~
/home/runner/workspace/ai_language/src/interpreters/DLInterpreter.cpp:296:6: error: ‘DLInterpreter’ has not been declared
  296 | void DLInterpreter::handleAddCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
make[2]: *** [CMakeFiles/ai_language_lib.dir/build.make:104: CMakeFiles/ai_language_lib.dir/src/interpreters/DLInterpreter.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:88: CMakeFiles/ai_language_lib.dir/all] Error 2
make: *** [Makefile:91: all] Error 2